<resources>
    <string name="app_name">Diary App</string>
    <string name="add_new">Add New Entry</string>
    <string name="text">Text</string>
    <string name="date">Date</string>
    <string name="submit">Submit</string>
    <string name="text_required">Diary text required </string>
    <string name="date_required">Date required</string>
    <string name="successful">Successful</string>
    <string name="nothing_found">Database is empty</string>
    <string name="all_entries">All entries in database</string>
    <string name="show_all">Show all entries</string>
</resources>